2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/part-combiner.scm (determine-split-list): split for voice
	crossings

	* input/regression/part-combine-cross.ly: new file.

	* scm/part-combiner.scm (make-part-combine-music): don't do
	relative inside partcombine arguments.

	* scm/music-functions.scm (make-non-relative-music): new function.

	* Documentation/user/notation.itely (Automatic part combining):
	add note about \relative.

	* lily/part-combine-iterator.cc (construct_children): add
	start_moment_ member.

	* lily/chord-tremolo-engraver.cc (acknowledge_grob): trigger
	stem-tremolo by stem object. This fixes no stem for tremolo bug.

	* lily/stem-tremolo.cc (print):	don't crash for no-stem.

	* Documentation/user/changing-defaults.itely (Which properties to
	change): fixes.

2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* po/fr.po: update.

2004-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/wilhelmus.ly: More original lyrics.  Add to examples.

	* stepmake/stepmake/generic-targets.make ($(outdir)/dummy.dep):
	Reinstate old code that issues warning.  Fixes --srcdir build.

2004-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/wilhelmus.ly: New file.

	* Documentation/user/notation.itely: 
	* Documentation/user/introduction.itely:
	* Documentation/user/tutorial.itely: Use quote ly-option instead
	of explicit @quotation.  This fixes too long lilypond linewidths
	resulting in overful hboxes.

	* scripts/lilypond-book.py: Add ly-option: `quote'.

2004-03-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* tex/titledefs.tex: Avoid that the first score line is extra
	indented if instrument is defined but not piece.

2004-03-30  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/macros.itexi (@internalsref) [info]: Prepend
	`lilypond/' to info file name.
	(@usermanref) [info]: New variant.

	* scm/documentation-generate.scm: Fix definition of @usermanref
	and @glossaryref (in the `ifinfo' branch) by prepending `lilypond/'
	to info file name.