@@ -1,5 +1,11 @@
 2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* scm/music-functions.scm (unfold-repeats): undo music compression
+	too.
+
+	* lily/music.cc (LY_DEFINE): rename to music-mutable-properties
+	(LY_DEFINE): ly:music-compress new function.
+
 	* scm/part-combiner.scm (determine-split-list): split for voice
 	crossings
 
